# langgraph-blueprint

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
scripts/debug/: debug_business_central_api.py  debug_container.py  debug_fund_accounting_api.py
src/agentic_app/: __init__.py  container.py  main.py  main_try_api.py
src/agentic_app/application/models/: __init__.py  aliases.py  entities.py
src/agentic_app/application/services/: __init__.py  accounting_service.py
src/agentic_app/application/workflows/: __init__.py
src/agentic_app/application/workflows/capital_call/: graph.py
src/agentic_app/configs/: __init__.py  business_central_odata_api_settings.py  fund_accounting_api_settings.py
src/agentic_app/core/: __init__.py
src/agentic_app/core/models/: __init__.py  decision.py  enums.py
src/agentic_app/core/models/payloads/: __init__.py  conversation.py  extraction.py  selection.py  workflow.py
src/agentic_app/core/runnables/: __init__.py  structured_output.py
src/agentic_app/core/schema/: __init__.py  utils.py
src/agentic_app/core/search/: __init__.py  search_hit.py  search_results.py  searchable_list.py
src/agentic_app/extensions/: __init__.py  base_chat_model_extensions.py  structured_output.py
src/agentic_app/infrastructure/: __init__.py
src/agentic_app/infrastructure/business_central_api/: __init__.py  business_central_http_client.py  client.py  config.py  constants.py  exceptions.py
src/agentic_app/infrastructure/business_central_api/dto_models/: __init__.py  bc_fund_response.py  bc_investor_response.py  bc_odata_response.py
src/agentic_app/infrastructure/business_central_api/models/: __init__.py  common.py  entities.py
src/agentic_app/infrastructure/configs/: fund_accounting_api_settings.py
src/agentic_app/infrastructure/fund_accounting_api/: __init__.py  auth.py  client.py  config.py  constants.py  exceptions.py
src/agentic_app/infrastructure/fund_accounting_api/models/: __init__.py  common.py  entities.py  transactions.py
src/agentic_app/models/: __init__.py  aliases.py  conversation.py
src/agentic_app/models/core/: __init__.py
src/agentic_app/models/domain/: __init__.py  fund.py  movie.py
src/agentic_app/models/payloads/: __init__.py  conversation.py  selection.py  workflow.py
src/agentic_app/services/: __init__.py  movie_service.py
src/agentic_app/workflows/: __init__.py
src/agentic_app/workflows/capital_call/: architecture.md  graph.py
src/agentic_app/workflows/movie/: __init__.py  graph.py  nodes.py  routing.py  state.py
tests/: conftest.py  test_example.py
tests/integration/: __init__.py  test_conversation_flows.py
tests/unit/: __init__.py
tests/unit/models/: test_decision.py  test_extraction.py  test_selection.py
tests/unit/services/: test_movie_service.py
